--- a/index.html
+++ b/index.html
@@ -305,6 +305,16 @@
                         </svg>
                     </button>
                 </div>
+                <!-- NOVO: Botão de pular tempo -->
+                <button id="phase2-skip-wait-btn" class="icon-button phase2-skip-wait-btn" title="Se já achou todas as coisas boas, clique aqui para as coisas ruins sumirem mais rápido" style="position:absolute; top:120px; right:30px; z-index:30;">
+                    <!-- Ícone de relógio preto SVG -->
+                    <svg width="80" height="80" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="24" cy="24" r="20" stroke="black" stroke-width="4" fill="white"/>
+                        <circle cx="24" cy="24" r="2.8" fill="black"/>
+                        <rect x="22.5" y="12" width="3" height="13" rx="1.5" fill="black"/>
+                        <rect x="24" y="24" width="10" height="3" rx="1.5" transform="rotate(45 24 24)" fill="black"/>
+                    </svg>
+                </button>
                 <div class="flowers-row">
                     <img src="img/flor1.png" alt="Flor 1" class="flower-on-ground">
                     <img src="img/flor2.png" alt="Flor 2" class="flower-on-ground">
